5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1644_1054.log
== TEST (2019-04-16 10:43:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"

print(mensagem) as mensagens de erro para corrigir seu código.

-- ERROR:
File "XXXX", line 10
    print(mensagem) as mensagens de erro para corrigir seu código.
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"

print(mensagem) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono == "cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"

print(mensagem) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono == "cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

patrono = input("nome do patrono: ")

if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"

print(mensagem)
-- OUTPUT:
20 nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:56:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

a = float(input("Digite a: ")) 
b = float(input("Digite b: ")) 
c = float(input("Digite c: "))
delta = b**2 – 4 * a * c 

if (delta < 0):
	print("Nao tem raiz real") 
else:
	print("Tem raiz real")




-- ERROR:
File "XXXX", line 8
    delta = b**2 – 4 * a * c 
                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:58:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

a = float(input("Digite a: ")) 
b = float(input("Digite b: ")) 
c = float(input("Digite c: "))

delta = b**2 – 4 * a * c 

if (delta < 0):
	print("Nao tem raiz real") 
else:
	print("Tem raiz real")




-- EXECUTION TIME:
0.129388
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 9
    delta = b**2 \u2013 4 * a * c 
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:59:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

a = float(input("Digite a: ")) 
b = float(input("Digite b: ")) 
c = float(input("Digite c: "))

delta = b**2 – 4 * a * c 

if (delta < 0):
	print("Nao tem raiz real") 
else:
	print("Tem raiz real")




-- ERROR:
File "XXXX", line 9
    delta = b**2 – 4 * a * c 
                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:59:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

a = float(input("Digite a: ")) 
b = float(input("Digite b: ")) 
c = float(input("Digite c: "))

delta = b**2 – 4 * a * c 

if (delta < 0):
	print("Nao tem raiz real") 
else:
	print("Tem raiz real")




-- ERROR:
File "XXXX", line 9
    delta = b**2 – 4 * a * c 
                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:26:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

a = float(input("Digite a: ")) 
b = float(input("Digite b: ")) 
c = float(input("Digite c: "))

delta = b**2 – 4 * a * c 

if (delta < 0):
	print("Nao tem raiz real") 
else:
	print("Tem raiz real")




-- ERROR:
File "XXXX", line 9
    delta = b**2 – 4 * a * c 
                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:44:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

a = float(input("Digite a: ")) 
b = float(input("Digite b: ")) 
c = float(input("Digite c: "))

delta = b**2 – 4 * a * c 

if (delta < 0):
	print("Nao tem raiz real") 
else:
	print("Tem raiz real")




-- EXECUTION TIME:
0.674777
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 9
    delta = b**2 \u2013 4 * a * c 
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:44:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

a = float(input("Digite a: ")) 
b = float(input("Digite b: ")) 
c = float(input("Digite c: "))

delta = b**2 – 4 * a * c 

if (delta < 0):
	print("Nao tem raiz real") 
else:
	print("Tem raiz real")




-- EXECUTION TIME:
0.820435
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 9
    delta = b**2 \u2013 4 * a * c 
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:04:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Usepatrono = input("nome do patrono: ")

a = float(input("Digite a: ")) 
b = float(input("Digite b: ")) 

delta = 2*a + b 

if (delta==3):
	print("ponto pertence a reta") 
else:
	print("ponto nao pertence a reta")




-- EXECUTION TIME:
0.488559
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
